Closed
Bug 1515001
Opened 7 years ago
Closed 7 years ago
Debug build crashes with `privacy.spoof_english` set
Categories
(Firefox :: Settings UI, defect, P1)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | 65+ | fixed |
| firefox64 | --- | unaffected |
| firefox65 | --- | unaffected |
| firefox66 | --- | unaffected |
People
(Reporter: gk, Assigned: tjr)
References
(Blocks 1 open bug)
Details
(Whiteboard: [tor 28875][fp-triaged])
Attachments
(1 file)
|
1.32 KB,
patch
|
baku
:
review+
RyanVM
:
approval-mozilla-esr60+
|
Details | Diff | Splinter Review |
Compiling Tor Browser in this case with `--enable-debug` results in an unusable bundle as we are hitting crashes during start-up:
Hit MOZ_CRASH(accessing non-early pref privacy.spoof_english before late prefs set) at /path/to/Preferences.cpp:932
tjr pointed dom/ipc/ContentPrefs.cpp and indeed doing something like
diff --git a/dom/ipc/ContentPrefs.cpp b/dom/ipc/ContentPrefs.cpp
index ac1ea10..87d4e2d 100644
--- a/dom/ipc/ContentPrefs.cpp
+++ b/dom/ipc/ContentPrefs.cpp
@@ -302,6 +302,7 @@ const char* mozilla::dom::ContentPrefs::gEarlyPrefs[] = {
"privacy.resistFingerprinting.target_video_res",
"privacy.resistFingerprinting.video_dropped_ratio",
"privacy.resistFingerprinting.video_frames_per_sec",
+ "privacy.spoof_english",
"privacy.trackingprotection.lower_network_priority",
"privacy.window.maxInnerHeight",
"privacy.window.maxInnerWidth",
Solves this bug.
| Assignee | ||
Updated•7 years ago
|
status-firefox64:
--- → unaffected
status-firefox65:
--- → unaffected
status-firefox66:
--- → unaffected
status-firefox-esr60:
--- → affected
tracking-firefox64:
--- → ?
tracking-firefox65:
--- → ?
tracking-firefox66:
--- → ?
tracking-firefox-esr60:
--- → ?
| Assignee | ||
Comment 1•7 years ago
|
||
Assignee: nobody → tom
Attachment #9032213 -
Flags: review?(amarchesini)
Updated•7 years ago
|
Attachment #9032213 -
Flags: review?(amarchesini) → review+
| Assignee | ||
Comment 2•7 years ago
|
||
Comment on attachment 9032213 [details] [diff] [review]
Bug 1515001 - Add privacy.spoof_english to the early content prefs to avoid a crash r?baku
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: Crashes Tor Browser
User impact if declined: Tor will have to carry another patch
Fix Landed on Version: n/a - only affects esr
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): This only sends another pref to the Content Process on startup; it's not a functional change.
String or UUID changes made by this patch:
Attachment #9032213 -
Flags: approval-mozilla-esr60?
Comment 3•7 years ago
|
||
Confused here. Why request tracking for all the things if only esr60 is affected?
Updated•7 years ago
|
Priority: -- → P1
Whiteboard: [tor 28875] → [tor 28875][fp-triaged]
Updated•7 years ago
|
Flags: needinfo?(tom)
| Assignee | ||
Comment 4•7 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #3)
> Confused here. Why request tracking for all the things if only esr60 is
> affected?
I messed up the flags - I was trying to say "Don't do anything for these versions" but I can only set '?' rather than '-'. I cleared the ?'s
tracking-firefox64:
? → ---
tracking-firefox65:
? → ---
tracking-firefox66:
? → ---
Flags: needinfo?(tom)
Updated•7 years ago
|
Comment 5•7 years ago
|
||
Comment on attachment 9032213 [details] [diff] [review]
Bug 1515001 - Add privacy.spoof_english to the early content prefs to avoid a crash r?baku
Simple crash fix for Tor users. Approved for 60.5.0esr.
Attachment #9032213 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Comment 6•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•