Bug 1515001 - Add privacy.spoof_english to the early content prefs to avoid a crash. r=baku, a=RyanVM